--- a/app/Resources/views/marketing-narrow.html.twig
+++ b/app/Resources/views/marketing-narrow.html.twig
@@ -80,32 +80,44 @@
       <div class="jumbotron">
         <h1>Setkání webových vývojářů z Vysočiny</h1>
         <p class="lead">Zveme Vás na neformální mini konferenci, na které se můžete potkat s kolegy z vašeho oboru a dozvědět se i praktické informace.</p>
-        <a class="btn btn-large btn-success" href="#">Vyberte si témata</a>
+        <a class="btn btn-large btn-success" href="#">Připravujeme ...</a>
       </div>
 
       <hr>
 
       <div class="row-fluid marketing">
         <div class="span6">
-          <h4>Téma 1</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>HTML 5 </h4>
+          <p>nové značky a jejich význam / použití</p>
 
-          <h4>Téma 2</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4>AngularJS vs jQuery</h4>
+          <p>Kde jQuery není efektivní používat a kde je naopak zbytečný AngularJS</p>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h4>Stromové struktury v databázích</h4>
+          <p>Nabídneme vám praktické ukázky a srovnání různých přístupů</p>
+          
+          <h4>Axure</h4>
+          <p>prototypování web aplikací</p>
+          
+          <h4>PostgreSQL</h4>
+          <p>novinky ve verzi 9.x (Foreign data wrappers, ...)</p>
         </div>
 
         <div class="span6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>LESS, Grunt, Zend Coding</h4>
+          <p>Aneb jak si programátor/kodér může ulehčit práci</p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4>PHP frameworky</h4>
+          <p>Zend, Nette, Symfony? Jaké mají výhody. Co používáte vy a proč?</p>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h4>Nginx</h4>
+          <p>Výkonná alternativa Apache.</p>
+          
+          <h4>PostgreSQL</h4>
+          <p>Administrace (ochrana dat, analýza logů)</p>
+          
+          <h4>PostgreSQL + Node.js + socket.io</h4>
+          <p>kombinace moderních nástrojů</p>
         </div>
       </div>
 
