--- a/app/Resources/views/marketing-narrow.html.twig
+++ b/app/Resources/views/marketing-narrow.html.twig
@@ -88,19 +88,19 @@
       <div class="row-fluid marketing">
         <div class="span6">
           <h4>HTML 5 </h4>
-          <p>nové značky a jejich význam / použití</p>
+          <p>Nové značky a jejich význam / použití</p>
 
           <h4>AngularJS vs jQuery</h4>
-          <p>Kde jQuery není efektivní používat a kde je naopak zbytečný AngularJS</p>
+          <p>Kde už použití jQuery není efektivní a kde je zbytečný AngularJS</p>
 
           <h4>Stromové struktury v databázích</h4>
           <p>Nabídneme vám praktické ukázky a srovnání různých přístupů</p>
           
           <h4>Axure</h4>
-          <p>prototypování web aplikací</p>
+          <p>Prototypování web aplikací</p>
           
           <h4>PostgreSQL</h4>
-          <p>novinky ve verzi 9.x (Foreign data wrappers, ...)</p>
+          <p>Novinky ve verzi 9.x (Foreign data wrappers, ...)</p>
         </div>
 
         <div class="span6">
@@ -117,7 +117,7 @@
           <p>Administrace (ochrana dat, analýza logů)</p>
           
           <h4>PostgreSQL + Node.js + socket.io</h4>
-          <p>kombinace moderních nástrojů</p>
+          <p>Kombinace moderních nástrojů</p>
         </div>
       </div>
 
