--- a/src/WebdevVysocina/MeetingBundle/Resources/views/Default/index.html.twig
+++ b/src/WebdevVysocina/MeetingBundle/Resources/views/Default/index.html.twig
@@ -1,12 +1,40 @@
 {% extends '::marketing-narrow.html.twig' %}
 
-
 {% block content %}
-    <div class="row">
-        <div class="span4 offset3">
-            <h4>Kontaktní formulář</h4>
-                {{ form(contactForm) }}
-        </div>
+<div class="row-fluid marketing">
+    <div class="span6">
+        <h4>HTML 5 </h4>
+        <p>Nové značky a jejich význam / použití</p>
+
+        <h4>AngularJS vs jQuery</h4>
+        <p>Kde už použití jQuery není efektivní a kde je zbytečný AngularJS</p>
+
+        <h4>Stromové struktury v databázích</h4>
+        <p>Nabídneme vám praktické ukázky a srovnání různých přístupů</p>
+
+        <h4>Axure</h4>
+        <p>Prototypování web aplikací</p>
+
+        <h4>PostgreSQL</h4>
+        <p>Novinky ve verzi 9.x (Foreign data wrappers, ...)</p>
     </div>
+
+    <div class="span6">
+        <h4>LESS, Grunt, Zend Coding</h4>
+        <p>Aneb jak si programátor/kodér může ulehčit práci</p>
+
+        <h4>PHP frameworky</h4>
+        <p>Zend, Nette, Symfony? Jaké mají výhody. Co používáte vy a proč?</p>
+
+        <h4>Nginx</h4>
+        <p>Výkonná alternativa Apache.</p>
+
+        <h4>PostgreSQL</h4>
+        <p>Administrace (ochrana dat, analýza logů)</p>
+
+        <h4>PostgreSQL + Node.js + socket.io</h4>
+        <p>Kombinace moderních nástrojů</p>
+    </div>
+</div>
 {% endblock %}
 
