kontakty - popis osob

--- a/src/WebdevVysocina/MeetingBundle/Resources/views/Default/contact.html.twig
+++ b/src/WebdevVysocina/MeetingBundle/Resources/views/Default/contact.html.twig
@@ -2,11 +2,70 @@
 
 
 {% block content %}
-    <div class="row-fluid marketing">
-        <div class="span4 offset4">
-            <h4>Kontaktní formulář</h4>
-            {{ form(contactForm) }}
-        </div>
+<div class="jumbotron">
+    <h4>webdev-vysocina@googlegroups.com</h4>
+</div>
+
+<div class="row">
+    <div class="span2">
+        <img src="http://www.emoticonswallpapers.com/avatar/people/Anonymous.gif" />
     </div>
+    <div class="span7">
+        <h4>Milan Lempera</h4>
+        <p>
+            <a href="http://www.qcm.cz">QCM s.r.o.</a>
+        </p>
+    </div>
+</div>
+<hr />
+<div class="row">
+    <div class="span2">
+        <img src="http://www.emoticonswallpapers.com/avatar/people/Anonymous.gif" />
+    </div>
+    <div class="span7">
+        <h4>Tomáš Souček</h4>
+        <p>
+            <a href="http://www.vspj.cz">Vysoká škola polytechnická Jihlava</a>
+        </p>
+    </div>
+</div>
+<hr />
+<div class="row">
+    <div class="span2">
+        <img src="https://lh6.googleusercontent.com/-vDtJkXtqemU/AAAAAAAAAAI/AAAAAAAAGpA/HeGUVDwS8Qw/s120-c/photo.jpg"
+             style="margin: 10px 0;"/>
+    </div>
+    <div class="span7">
+        <h4>Radek Žilka</h4>
+        <p>
+            PHP programátor/analytik, <a href="http://www.qcm.cz">QCM s.r.o.</a>
+        </p>
+        <p>
+            Mojí hlavní činností je udržba převzatého kódu a vývoj modulů v zastaralém CMS.
+        </p>
+        <p>
+            V poslední době zkouším Symfony2 a AngularJS a zajímá mě automatizace při vývoji webů.
+        </p>
+        <span class="links">
+            <a class="js-tooltip" href="http://www.radekzilka.cz/" target="_blank" title="" data-original-title="Web"><i class="icon-globe"></i><span class="visuallyhidden"> Web</span></a>
+            <a class="js-tooltip" href="http://twitter.com/kradecek" target="_blank" title="" data-original-title="Twitter"><i class="icon-twitter"></i><span class="visuallyhidden"> Twitter</span></a>
+            <a class="js-tooltip" href="http://cz.linkedin.com/in/radekzilka" target="_blank" title="" data-original-title="LinkedIn"><i class="icon-linkedin"></i><span class="visuallyhidden"> LinkedIn</span></a>
+            <a class="js-tooltip" href="https://plus.google.com/104256702274947149881" target="_blank" title="" data-original-title="Google+"><i class="icon-google-plus"></i><span class="visuallyhidden"> Google+</span></a>
+        </span>
+    </div>
+</div>
+<hr />
+<div class="row">
+    <div class="span2">
+        <img src="http://www.emoticonswallpapers.com/avatar/people/Anonymous.gif" />
+    </div>
+    <div class="span7">
+        <h4>Tomáš Plášil</h4>
+        <p>
+            <a href="http://www.qcm.cz">QCM s.r.o.</a>
+        </p>
+    </div>
+</div>
+
 {% endblock %}
 
