--- a/src/WebdevVysocina/MeetingBundle/Resources/views/Default/index.html.twig
+++ b/src/WebdevVysocina/MeetingBundle/Resources/views/Default/index.html.twig
@@ -20,7 +20,7 @@
     </div>
 
     <div class="span6">
-        <h4>LESS, Grunt, Zend Coding</h4>
+        <h4>LESS, Grunt, Zen Coding/Emmet</h4>
         <p>Aneb jak si programátor/kodér může ulehčit práci</p>
 
         <h4>PHP frameworky</h4>
