--- a/app/Resources/views/marketing-narrow.html.twig
+++ b/app/Resources/views/marketing-narrow.html.twig
@@ -48,6 +48,7 @@
       }
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
